<resources>
    <string name="app_name">BankApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello">გამარჯობა</string>
    <string name="username">მომხმარებლის სახელი</string>
    <string name="forgotPassword">დაგავიწყდა პაროლი?</string>
    <string name="login">შესვლა</string>
    <string name="register">რეგისტრაცია</string>
    <string name="userId">პირადი ნომერი</string>
    <string name="mobileNumber">მობილურის ნომერი</string>
    <string name="next">შემდეგი</string>
    <string name="cardAuth">ბარათით იდენტიფიკაცია</string>
    <string name="firstSixNumbers">პირველი 6</string>
    <string name="lastFourNumbers">ბოლო 4</string>
    <string name="month_year">თვე/წელი</string>
    <string name="cvcCode">CVC</string>
    <string name="user_name">მომხმარებლის სახელი</string>
    <string name="password">პაროლი</string>
    <string name="repeat_password">გაიმეორეთ პაროლი</string>
    <string name="agreement">ვეთანხმები პირობებს</string>
    <string name="registration">რეგისტრაცია</string>
    <string name="backToLoginPage">მთავარ გვერდზე დაბრუნება</string>
    <string name="available_money">ხელმისაწვდომია</string>
    <string name="log_out">Log out</string>
    <string name="add_balance">ბალანსის შევსება</string>
    <string name="enter_money">შეიყვანეთ თანხა</string>
    <string name="gel">GEL</string>
    <string name="currency">Currency</string>
    <string name="enroll">შევსება</string>
    <string name="conversion">კონვერტაცია</string>
    <string name="_000_00">000.00</string>
    <string name="sell_money_anount">გასაყიდი თანხა</string>
    <string name="convert_to_usd">კონვერტაცია მოხდება USD-ში</string>
    <string-array name="currencies">
        <item>GEL</item>
        <item>USD</item>
        <item>EUR</item>
    </string-array>
    <string name="currencies">კურსები</string>
    <string name="calculator">კალკულატორი</string>
    <string name="bank_name">ABC Bank</string>
    <string name="official_rate_title">"ოფიც.კურსი"</string>
    <string name="mob_rate_title">"მობ.ბანკის კურსი"</string>
    <string name="official_rate">"3.0054"</string>
    <string name="buy_rate">"2.2332"</string>
    <string name="sell_Rate">"2.1032"</string>
    <string name="buy_title">"ყიდვა"</string>
    <string name="sell_title">"გაყიდვა"</string>
    <string name="currency_title">"1 აშშ დოლარი "</string>
    <string name="typeAmount">"0.00"</string>
    <string name="convertFrom">"საიდან?"</string>
    <string name="convertTo">"სად?"</string>
    <string name="crypto_currency_name">"Bitcoin"</string>
    <string name="crypto_currency_symbol">"BTC"</string>
    <string name="cryptoName">"Crypto Currency"</string>
    <string name="cryptoSymbol">"Crypto Symbol"</string>
    <string name="cryptoDate">"02.02.2022 12:22:22"</string>
    <string name="cryptoPrice">"Price: "</string>
    <string name="cryptoCap">"Market Cap: "</string>
    <string name="cryptoVolume">"Volume: "</string>
    <string name="notAvailable">"NA"</string>
    <string name="CryptoPriceChange">"Price Change: "</string>
    <string-array name="currency_codes">
        <item>AED</item>
        <item>AMD</item>
        <item>AVD</item>
        <item>AZN</item>
        <item>BGN</item>
        <item>CAD</item>
        <item>CHF</item>
        <item>CNY</item>
        <item>CZK</item>
        <item>DKK</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>ILS</item>
        <item>JPY</item>
        <item>NOK</item>
        <item>PLN</item>
        <item>QAR</item>
        <item>RUR</item>
        <item>SAR</item>
        <item>SEK</item>
        <item>TRY</item>
        <item>UKG</item>
        <item>USD</item>
        <item>GEL</item>
    </string-array>





</resources>