<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="5dp"
    android:layout_margin="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topLayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/LL_logoWrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/IV_CryptoCurrencyLogo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:srcCompat="@drawable/ic_baseline_monetization_on_24" />

            <TextView
                android:id="@+id/TV_cryptoCurrencySymbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/IV_CryptoCurrencyLogo"
                android:text="@string/crypto_currency_symbol"
                android:textSize="25sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>


        <TextView
            android:id="@+id/TV_CryptoCurrencyDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cryptoDate"
            android:textStyle="italic"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/LL_logoWrapper"/>

    <TextView
        android:id="@+id/TV_CryptoCurrencyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crypto_currency_name"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LL_logoWrapper"
        />


        <TextView
            android:id="@+id/TV_volume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text= "@string/cryptoVolume"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toBottomOf="@+id/TV_CryptoCurrencyName"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:id="@+id/TV_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CryptoPriceChange"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toBottomOf="@+id/TV_volume"
            app:layout_constraintStart_toStartOf="parent"
            />


            <TextView
                android:id="@+id/TV_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cryptoPrice"
                android:layout_marginBottom="10dp"
                android:textSize="18sp"
                android:layout_marginTop="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TV_CryptoCurrencyName"
                />
            <TextView
                android:id="@+id/TV_marketCap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cryptoCap"
                android:layout_below="@+id/TV_price"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/TV_price"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                />





    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>
