<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.CurrenciesFragment"
    android:background="@color/light_grey">


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/CL_topAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.appbar.MaterialToolbar
                android:background="@color/blue"
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/bank_name"
                app:titleCentered="true"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"

                />
        </com.google.android.material.appbar.AppBarLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/LL_choosePage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/CL_topAppBar"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"

        >
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/TV_chooseCurrencies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currencies"
            android:layout_marginEnd="30dp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/TV_chooseCalculator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculator"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="5dp"
        android:layout_margin="10dp"
        android:layout_below="@+id/LL_choosePage"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            >

            <TextView
                android:id="@+id/TV_currencyTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/currency_title"
                android:textSize="20sp" />


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/IV_currencyIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/TV_currencyTitle"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                app:srcCompat="@drawable/ic_baseline_attach_money_24" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/LL_officialRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/TV_currencyTitle"
                android:layout_alignBottom="@+id/LL_buy"
                android:layout_marginEnd="20dp"
                android:layout_toEndOf="@+id/IV_currencyIcon"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/TV_officialRatesTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/official_rate_title"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/TV_officialRate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="33dp"
                    android:elevation="5dp"
                    android:text="@string/official_rate"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </androidx.appcompat.widget.LinearLayoutCompat>


            <TextView
                android:id="@+id/TV_mobBankRatesTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/TV_currencyTitle"
                android:layout_marginBottom="5dp"
                android:layout_toEndOf="@+id/LL_officialRate"
                android:text="@string/mob_rate_title"
                android:textSize="17sp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/LL_buy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/TV_mobBankRatesTitle"
                android:layout_marginEnd="30dp"
                android:layout_toEndOf="@+id/LL_officialRate"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/TV_sellTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/TV_officialRatesTitle"
                    android:text="@string/sell_title" />

                <TextView
                    android:id="@+id/TV_sellRate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/TV_officialRatesTitle"
                    android:layout_marginTop="10dp"
                    android:text="@string/sell_Rate"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/TV_mobBankRatesTitle"
                android:layout_marginBottom="20dp"
                android:layout_toEndOf="@id/LL_buy"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/TV_buyTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/TV_officialRatesTitle"
                    android:text="@string/buy_title" />

                <TextView
                    android:id="@+id/TV_buyRate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/TV_officialRatesTitle"
                    android:layout_marginTop="10dp"
                    android:text="@string/buy_rate"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
            </androidx.appcompat.widget.LinearLayoutCompat>




        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>