<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.RegSecondFragment">



        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp"
            android:text="@string/registration"
            android:textColor="@color/blue"
            android:textSize="35sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/userNameWrapper"
            app:layout_constraintTop_toBottomOf="@id/registration"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            app:errorEnabled="true"
            android:textColorHint="@color/black"
            app:hintTextColor="@color/blue"
            app:boxStrokeColor="@color/blue">



            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:theme="@style/cursorColor" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/passwordWrapper"
            app:layout_constraintTop_toBottomOf="@id/userNameWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:hint="@string/password"
            app:boxStrokeColor="@color/blue"
            android:textColorHint="@color/black"
            app:hintTextColor="@color/blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:theme="@style/cursorColor" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/passwordRepeatWrapper"
            app:layout_constraintTop_toBottomOf="@id/passwordWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:hint="@string/repeat_password"
            app:boxStrokeColor="@color/blue"
            android:textColorHint="@color/black"
            app:hintTextColor="@color/blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordRepeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:theme="@style/cursorColor"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.checkbox.MaterialCheckBox
            android:layout_below="@id/passwordRepeatWrapper"
            android:id="@+id/checkBox"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/passwordRepeatWrapper"
            android:text="@string/agreement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:backgroundTint="@color/blue"
            android:letterSpacing="0.05"
            android:text="@string/registration"
            android:textSize="26sp" />


</androidx.constraintlayout.widget.ConstraintLayout>